force-app/main/default/objects/Case/fields/Call_Description__c.field-meta.xml
<CustomField>
    <fullName>Call_Description__c</fullName>
    <label>Call Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>