force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Used to determine the agent high-level skills required to solve this case</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
            <value>
                <fullName>Withdrawals &amp; Internal Transfers</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Staking</fullName>
            </value>
            <value>
                <fullName>Referral Program</fullName>
            </value>
            <value>
                <fullName>Compliance &amp; Regulation - Other</fullName>
            </value>
            <value>
                <fullName>Compliance &amp; Regulation - Business Application</fullName>
            </value>
            <value>
                <fullName>Compliance &amp; Regulation - Manual Verification</fullName>
            </value>
            <value>
                <fullName>Compliance &amp; Regulation - Law Enforcement Requests</fullName>
            </value>
            <value>
                <fullName>Compliance &amp; Regulation - Investment Limits</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Account Management &amp; Login Issues</fullName>
                <isActive>false</isActive>
                <label>Account Management &amp; Login Issues</label>
            </value>
            <value>
                <fullName>Compliance &amp; Regulation</fullName>
                <isActive>false</isActive>
                <label>Compliance &amp; Regulation</label>
            </value>
            <value>
                <fullName>Feedback</fullName>
                <isActive>false</isActive>
                <label>Feedback</label>
            </value>
            <value>
                <fullName>Getting Started &amp; Verifications</fullName>
                <isActive>false</isActive>
                <label>Getting Started &amp; Verifications</label>
            </value>
            <value>
                <fullName>How can we help you today?</fullName>
                <isActive>false</isActive>
                <label>How can we help you today?</label>
            </value>
            <value>
                <fullName>Security</fullName>
                <isActive>false</isActive>
                <label>Security</label>
            </value>
            <value>
                <fullName>Trading &amp; Advanced Orders</fullName>
                <isActive>false</isActive>
                <label>Trading &amp; Advanced Orders</label>
            </value>
            <value>
                <fullName>Two Factor Authentications</fullName>
                <isActive>false</isActive>
                <label>Two Factor Authentications</label>
            </value>
            <value>
                <fullName>Which currency are you depositing?</fullName>
                <isActive>false</isActive>
                <label>Which currency are you depositing?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>