force-app/main/default/objects/Case/fields/First_Time_Response__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Response__c</fullName>
    <label>First Time Response</label>
    <type>DateTime</type>
</CustomField>