force-app/main/default/objects/Case/fields/Formatted_Summary__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Summary__c</fullName>
    <label>Formatted Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>