force-app/main/default/objects/Case/fields/FormattedDescription__c.field-meta.xml
<CustomField>
    <fullName>FormattedDescription__c</fullName>
    <label>Formatted Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>