force-app/main/default/objects/Case/fields/Is_Owned_by_Compliance_Handler__c.field-meta.xml
<CustomField>
    <fullName>Is_Owned_by_Compliance_Handler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Owned by Compliance Handler?</label>
    <type>Checkbox</type>
</CustomField>