force-app/main/default/objects/Case/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Product Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>