force-app/main/default/objects/Case/fields/Last_set_to_Waiting_on_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_set_to_Waiting_on_Customer_Date__c</fullName>
    <label>Last set to Waiting on Customer Date</label>
    <type>Date</type>
</CustomField>