force-app/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <inlineHelpText>Used to classify specific issues. It may also be used to determine the
        additional agent skills to solve this case in the future.</inlineHelpText>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2FA</fullName>
            </value>
            <value>
                <fullName>Advanced trading</fullName>
            </value>
            <value>
                <fullName>Appropriateness questionnaire</fullName>
            </value>
            <value>
                <fullName>Bonding</fullName>
            </value>
            <value>
                <fullName>Business account</fullName>
            </value>
            <value>
                <fullName>Business application</fullName>
            </value>
            <value>
                <fullName>Change (Legal name, email, phone number, DOB)</fullName>
            </value>
            <value>
                <fullName>Close account</fullName>
            </value>
            <value>
                <fullName>Crypto</fullName>
            </value>
            <value>
                <fullName>Duplicate accounts</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>E-transfers</fullName>
            </value>
            <value>
                <fullName>Forgot username/password</fullName>
            </value>
            <value>
                <fullName>General feedback</fullName>
            </value>
            <value>
                <fullName>General trading question (fees, order type)</fullName>
            </value>
            <value>
                <fullName>Hacked/compromised account</fullName>
            </value>
            <value>
                <fullName>Internal transfers</fullName>
            </value>
            <value>
                <fullName>Investment limits</fullName>
            </value>
            <value>
                <fullName>Law enforcement requests</fullName>
            </value>
            <value>
                <fullName>Locked account</fullName>
            </value>
            <value>
                <fullName>Manual verification</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Newsletters</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payouts</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Recurring purchases</fullName>
            </value>
            <value>
                <fullName>Redemption (unbonding)</fullName>
            </value>
            <value>
                <fullName>Regulatory status</fullName>
            </value>
            <value>
                <fullName>Scam/fraud detected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>