force-app/main/default/objects/Case/fields/Support_Language__c.field-meta.xml
<CustomField>
    <fullName>Support_Language__c</fullName>
    <inlineHelpText>Used to determine the language skills agents need to handle this case.</inlineHelpText>
    <label>Support Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>