force-app/main/default/objects/Case/fields/What_is_your_TXID__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_TXID__c</fullName>
    <description>Transaction ID</description>
    <label>What is your TXID?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>