force-app/main/default/objects/Case/fields/X2nd_sub_Category__c.field-meta.xml
<CustomField>
    <fullName>X2nd_sub_Category__c</fullName>
    <label>2nd sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wire deposit</fullName>
            </value>
            <value>
                <fullName>Interac e-Transfer</fullName>
            </value>
            <value>
                <fullName>I have not received my deposit</fullName>
            </value>
            <value>
                <fullName>How do I deposit cryptocurrency?</fullName>
            </value>
            <value>
                <fullName>Fees, limits and timeframes</fullName>
            </value>
            <value>
                <fullName>Where can I find my wallet address?</fullName>
            </value>
            <value>
                <fullName>How to recover a missing crypto deposit?</fullName>
            </value>
            <value>
                <fullName>How do I withdraw CAD to my bank account?</fullName>
            </value>
            <value>
                <fullName>Withdrawal timeframes, fees and limits</fullName>
            </value>
            <value>
                <fullName>How do I cancel a withdrawal request?</fullName>
            </value>
            <value>
                <fullName>I have not received my Canadian dollar withdrawal</fullName>
            </value>
            <value>
                <fullName>How to withdraw crypto to an external wallet?</fullName>
            </value>
            <value>
                <fullName>My withdrawal has not arrived at the destination address</fullName>
            </value>
            <value>
                <fullName>How to send an Internal transfer within NDAX?</fullName>
            </value>
            <value>
                <fullName>Advantages of internal transfers</fullName>
            </value>
            <value>
                <fullName>How do I track internal transfers?</fullName>
            </value>
            <value>
                <fullName>How do I send cryptocurrency as a gift on NDAX?</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>