force-app/main/default/objects/Case/fields/X3rd_sub_Category__c.field-meta.xml
<CustomField>
    <fullName>X3rd_sub_Category__c</fullName>
    <label>3rd sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>X2nd_sub_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I have not received my wire transfer</fullName>
            </value>
            <value>
                <fullName>How do I deposit via wire transfer?</fullName>
            </value>
            <value>
                <fullName>Timeframe, fees and limits</fullName>
            </value>
            <value>
                <fullName>How do I upload a wire receipt?</fullName>
            </value>
            <value>
                <fullName>I have not received my Interac e-Transfer</fullName>
            </value>
            <value>
                <fullName>How do I deposit via Interac e-Transfer?</fullName>
            </value>
            <value>
                <fullName>How do I locate my reference number?</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>