force-app/main/default/objects/Case/validationRules/Prevent_Edit_on_Merged_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_on_Merged_Case</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status, &apos;Merged&apos; ) &amp;&amp; NOT( ISCHANGED ( Status ) ) &amp;&amp; $UserRole.Name &lt;&gt; &apos;Administrator&apos;</errorConditionFormula>
    <errorMessage>This case has been merged and is no longer editable.</errorMessage>
</ValidationRule>