force-app/main/default/objects/Case/listViews/All_Open_Compliance_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Compliance_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Compliance</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Open Compliance Cases</label>
</ListView>