force-app/main/default/objects/Case/listViews/All_Open_General_Support_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_General_Support_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>notEqual</operation>
        <value>Compliance</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>Compliance,Julia,Ben,Margarita,Mark,Darshil,Carey</value>
    </filters>
    <label>All Open General Support Cases</label>
</ListView>