force-app/main/default/objects/Case/listViews/All_Open_General_Support_ticket.listView-meta.xml
<ListView>
    <fullName>All_Open_General_Support_ticket</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,On Hold,In Progress,Waiting for Customer,Response Received</value>
    </filters>
    <label>All Open General Support Tickets</label>
</ListView>