force-app/main/default/objects/Case/listViews/Compliance_Support_Case.listView-meta.xml
<ListView>
    <fullName>Compliance_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Compliance</label>
    <queue>Compliance_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>