force-app/main/default/objects/Case/listViews/Escalations_Case.listView-meta.xml
<ListView>
    <fullName>Escalations_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Escalations</label>
    <queue>Escalations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>