force-app/main/default/objects/Case/listViews/Feedback_and_Affiliate_Case.listView-meta.xml
<ListView>
    <fullName>Feedback_and_Affiliate_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Feedback and Affiliate</label>
    <queue>Feedback_and_Affiliate</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>