force-app/main/default/objects/Case/listViews/Service_Case_Case.listView-meta.xml
<ListView>
    <fullName>Service_Case_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Category__c</columns>
    <columns>Support_Language__c</columns>
    <filterScope>Queue</filterScope>
    <label>General Support</label>
    <queue>General_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>