force-app/main/default/objects/Case/listViews/Tech_Case.listView-meta.xml
<ListView>
    <fullName>Tech_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Tech</label>
    <queue>Tech</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>