force-app/main/default/objects/Case/listViews/Topic_Compliance_Regulation.listView-meta.xml
<ListView>
    <fullName>Topic_Compliance_Regulation</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Compliance &amp; Regulation</value>
    </filters>
    <label>Topic: Compliance &amp; Regulation</label>
</ListView>