force-app/main/default/objects/Case/listViews/Web_To_Case.listView-meta.xml
<ListView>
    <fullName>Web_To_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Web</value>
    </filters>
    <label>Web To Case</label>
</ListView>